--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
     "clear": "^0.1.0",
     "react": "17.0.2",
     "react-native": "0.67.2",
-    "react-native-logs": "^4.0.1"
+    "react-native-gesture-handler": "^2.6.2",
+    "react-native-logs": "^4.0.1",
+    "react-native-reanimated": "^2.10.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.17.0",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
