--- a/ios/SampleReactNative/Info.plist
+++ b/ios/SampleReactNative/Info.plist
@@ -2,6 +2,15 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSAppTransportSecurity
+</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads
+
+    &lt;key&gt;NSAllowsArbitraryLoads&lt;/key&gt;&lt;true/&gt;
+</key>
+		<true/>
+	</dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
