--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,12 @@
 /android/.gradle
 /android/.idea
 /android/java_pid*.hprof
+/android/.DS_Store
+/android/app/.DS_Store
+/android/app/src/.DS_Store
+/android/app/src/main/.DS_Store
+/android/app/src/main/java/.DS_Store
+/android/app/src/main/java/com/.DS_Store
 
 /ios/Pods
 /ios/Podfile.lock
