--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,9 +9,16 @@ buildscript {
         ndkVersion = "21.4.7075529"
     }
     repositories {
-        mavenLocal()
         google()
+        jcenter()
+        mavenLocal()
         mavenCentral()
+        maven { url 'https://maven.google.com' }
+        maven {
+            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+            url "$rootDir/../node_modules/react-native/android"
+        }
+        maven { url 'https://jitpack.io'}
     }
     dependencies {
         classpath('com.android.tools.build:gradle:7.2.2')
