--- a/ios/SampleReactNative/Info.plist
+++ b/ios/SampleReactNative/Info.plist
@@ -2,13 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSAppTransportSecurity
-</key>
+	<key>NSAppTransportSecurity</key>
 	<dict>
-		<key>NSAllowsArbitraryLoads
-
-    &lt;key&gt;NSAllowsArbitraryLoads&lt;/key&gt;&lt;true/&gt;
-</key>
+		<key>NSAllowsArbitraryLoads&lt;key&gt;NSAllowsArbitraryLoads&lt;/key&gt;&lt;true/&gt;</key>
 		<true/>
 	</dict>
 	<key>CFBundleDevelopmentRegion</key>
@@ -47,7 +43,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>Precisamos abrir a câmera para fazer a captura da selfie</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>Gostariamos de acesso à geolocalização</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
